API changes and lots of form validation changes

--- a/Admin/Pages/Certificates/Descriptions/Create.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Create.cshtml
@@ -9,10 +9,10 @@
 <h4>Certificate Description</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form method="post">
+    <div class="col-md-6">
+        <form method="post" class="trimFormWhenSubmitting">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Certificate.Id" />
+
             <div class="form-group">
                 <label asp-for="Certificate.DescEng" class="control-label"></label>
                 <textarea asp-for="Certificate.DescEng" class="form-control" required></textarea>
