--- a/Admin/Pages/Certificates/Descriptions/Details.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Details.cshtml
@@ -26,6 +26,8 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Description.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Back to List</a> |
+    <a asp-page="./Locate" asp-route-id="@Model.Description.Id">Locate</a> |
+    <a asp-page="./Delete" asp-route-id="@Model.Description.Id">Delete</a>
 </div>
 
