--- a/Admin/Pages/Certificates/Descriptions/Edit.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form method="post">
+        <form method="post" class="trimFormWhenSubmitting">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Certificate.Id" />
             <div class="form-group">
