--- a/Admin/Pages/Shared/_SimilarEdit.cshtml
+++ b/Admin/Pages/Shared/_SimilarEdit.cshtml
@@ -202,6 +202,9 @@
             <input type="hidden" data-val="true" data-val-required="The Position field is required." 
                 id="JobPosition_Position" name="JobPosition.Position" value="@Model.JobPositionId" />
 
+
+            <input type="hidden" name="PercentSelection" value="@Model.PercentMatch.ToString()" />
+
             <table class="table table-bordered">
                 <thead>
                     <tr>
@@ -541,7 +544,7 @@
 
                                     <div class="row">
                                         <div class="col-10 @(position.JobTitleId == Model.JobPositionId ? "same-position" : "")">
-                                            <a target="_blank" class="btn btn-link text-left text-wrap" href="/Positions/Details?positionid=@position.JobTitleId">
+                                            <a target="_blank" class="btn btn-link text-left text-wrap" href="/Positions/Details?positionid=@position.JobTitleId" id="positionScroll-@position.JobTitleId">
                                                 @position.JobGroupLevelCode @position.JobTitleEng 
                                                 <span class="bold @(position.JobTitleId == Model.JobPositionId ? "text-dark" : "")">/</span> 
                                                 @position.JobTitleFre 
